--- a/about.html
+++ b/about.html
@@ -7,38 +7,17 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="link-section.css">
     <link rel="stylesheet" href="styles.css">
-
+    <!-- Font Awesome Icon Script -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-
-<!-- Menu Button -->
-<nav class="menu">
-    <div class="menu-content">
-        <a href="index.html#home" class="menu-item">Home</a>
-        <a href="index.html#experience" class="menu-item">Experience</a>
-        <a href="about.html" class="menu-item">About Me</a>
-        <a href="#projects" class="menu-item" id="projects-btn">Projects</a> 
-    </div>
-</nav>
-
-<div id="projects-modal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Select a Project</h2>
-        <a href="data-visualisation.html" class="button">Adelaide Age Structure Data Visualisation</a>
-        <a href="Thesis.html" class="button">Thesis</a>
-        <a href="AR.html" class="button">AR software project</a>
-        <a href="AWL.html" class="button">Financial Data Visualisation</a>
-        <a href="Map.html" class="button">Animal Rescue Mapping Visualisation</a>
-    </div>
-</div>
-<script src="script.js"></script>
 <body>
 
-    <!-- about me section -->
+    <!-- 動態加載 menu -->
+    <div id="menu-placeholder"></div>
 
+    <!-- About Me Section -->
     <section class="about-section">
         <div class="about-container">
-            
             <div class="about-card">
                 <img src="images/me2.jpg" alt="Your Photo" class="profile-img">
                 <div class="about-info">
@@ -46,7 +25,6 @@
                     <!-- <p>your-email@example.com</p> -->
                 </div>
             </div>
-
             <div class="about-text">
                 <h2>About Me</h2>
                 <p>Hello! I'm <strong>Andrew Cheng</strong>, a Software Engineer and Data Analyst based in Adelaide, Australia. I hold a Master's degree in <strong>Computer Science</strong> from The University of Queensland, specializing in data analysis, software development, cloud computing and IT support.</p>
@@ -57,24 +35,9 @@
     </section>
 
     <!-- links-section -->
-    <section id="links-section">
-        <div class="links-container">
-            <div class="link-category">
-                <h3>Projects</h3>
-                <a href="data-visualisation.html">Adelaide Age Structure Data Visualisation</a>
-                <a href="Thesis.html">Thesis</a>
-                <a href="AR.html">AR software project</a>
-                <a href="AWL.html">Financial Data Visualisation</a>
-                <a href="Map.html">Animal Rescue Mapping Visualisation</a>
-            </div>
-            <div class="link-category">
-                <h3>Contact</h3>
-                <a href="https://www.linkedin.com/in/andrewcheng887/" target="_blank">LinkedIn</a>
-            </div>
-        </div>
-    </section>
+    <div id="links-section-placeholder"></div>
 
-    <!-- Font Awesome Icon Script -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!-- links-section -->
+    <script src="loadContent.js"></script>
 </body>
 </html>
