data mining project

--- a/links-section.html
+++ b/links-section.html
@@ -7,6 +7,7 @@
             <a href="AR.html">AR software project</a>
             <a href="AWL.html">Financial Data Visualisation</a>
             <a href="Map.html">Animal Rescue Mapping Visualisation</a>
+            <a href="data_mining.html">Data Mining Project</a>
         </div>
         <div class="link-category">
             <h3>Contact</h3>
