--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
         <a href="AR.html" class="button">AR software project</a>
         <a href="AWL.html" class="button">Financial Data Visualisation</a>
         <a href="Map.html" class="button">Animal Rescue Mapping Visualisation</a>
+        <a href="data_mining.html" class="button">Data Mining Project</a>
     </div>
 </div>
 <script src="script.js"></script>
