--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="icon" href="images/dinosaur.gif">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="link-section.css">
     <link rel="stylesheet" href="styles.css">
