--- a/links-section.html
+++ b/links-section.html
@@ -8,6 +8,7 @@
             <a href="AWL.html">Financial Data Visualisation</a>
             <a href="Map.html">Animal Rescue Mapping Visualisation</a>
             <a href="data_mining.html">Data Mining Project</a>
+            <a href="cloud.html">Cloud Computing Project</a>
         </div>
         <div class="link-category">
             <h3>Contact</h3>
