--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,7 @@
         <a href="AWL.html" class="button">Financial Data Visualisation</a>
         <a href="Map.html" class="button">Animal Rescue Mapping Visualisation</a>
         <a href="data_mining.html" class="button">Data Mining Project</a>
+        <a href="cloud.html" class="button">Cloud Computing Project</a>
     </div>
 </div>
 <script src="script.js"></script>
