--- a/cloud.html
+++ b/cloud.html
@@ -36,7 +36,7 @@
             <h3>Docker Compose Configuration</h3>
             
             <p>This image showcases the Docker Compose configuration, which defines the services used in this project. It includes MariaDB for data storage, PHP for server-side logic, Nginx as the web server, and PHPMyAdmin for managing the database. Each service is connected via an overlay network, enabling seamless communication between containers.</p>
-            <img src="images/docker_compose.jpg" alt="Docker Compose Configuration" class="project-img">
+            <img src="images/docker_compose.jpg" alt="Docker Compose Configuration" class="project-img-small">
         </div>
 
         <!-- Architecture Design Image -->
