--- a/data_mining.html
+++ b/data_mining.html
@@ -34,7 +34,7 @@
     <div class="project"> 
         <h3>Confusion Matrix and Model Metrics</h3>
         <p>This image shows the confusion matrix and performance metrics for the KNN model. The model achieved a precision and recall of 0.97 for the negative class (0) and 0.80 for the positive class (1), demonstrating strong overall performance.</p>
-        <img src="images/confusion_matrix.jpg" alt="Confusion Matrix and Model Metrics" class="project-img">
+        <img src="images/confusion_matrix.jpg" alt="Confusion Matrix and Model Metrics" class="project-img-small">
     </div>
 
     <!-- Dataset Preview Section -->
