--- a/cloud.html
+++ b/cloud.html
@@ -33,10 +33,9 @@
         
         <!-- Docker Compose Configuration Image -->
         <div class="project"> 
-            <h3>Docker Compose Configuration</h3>
-            
+            <h3>Docker Compose Configuration</h3>          
             <p>This image showcases the Docker Compose configuration, which defines the services used in this project. It includes MariaDB for data storage, PHP for server-side logic, Nginx as the web server, and PHPMyAdmin for managing the database. Each service is connected via an overlay network, enabling seamless communication between containers.</p>
-            <img src="images/docker_compose.jpg" alt="Docker Compose Configuration" class="project-img"style="width: 50%; margin: 10px auto;">
+            <img src="images/docker_compose.png" alt="Docker Compose Configuration" class="project-img"style="width: 50%; margin: 10px auto;">
         </div>
 
         <!-- Architecture Design Image -->
