--- a/cloud.html
+++ b/cloud.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Mining Project</title>
+    <title>Cloud Computing Project</title>
     <link rel="icon" href="images/dinosaur.gif">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="link-section.css">
@@ -11,12 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <!-- Placeholder for dynamically loaded menu -->
     <div id="menu-placeholder"></div>
 
     <!-- Cloud Computing Project Section -->
-    <section class="AWL-section">
+    <section class="projects-section">
         <h2>Cloud Computing Project</h2>
         
         <!-- Project Overview -->
@@ -52,8 +51,9 @@
             <p>This cost estimate reflects the monthly expenses for running the cloud infrastructure, which includes computing resources and storage. By using a cloud provider, this setup benefits from scalability and cost-effectiveness, with an estimated monthly expense of $75.63 based on usage.</p>
             <img src="images/monthly_cost.jpg" alt="Monthly Cost Estimate" class="project-img">
         </div>  
-         <!-- Skills used in this project -->
-         <div class="skills-section">
+
+        <!-- Skills used in this project -->
+        <div class="skills-section">
             <h3>Skills Used in This Project</h3>
             <ul class="skills-list">
                 <li>GCP</li>
@@ -70,12 +70,10 @@
         </div>     
     </section>
 
-    
     <!-- Placeholder for dynamically loaded link section -->
     <div id="links-section-placeholder"></div>
 
     <!-- Load external JavaScript file for dynamic content loading -->
     <script src="loadContent.js"></script>
-
 </body>
 </html>
