--- a/menu.html
+++ b/menu.html
@@ -1,25 +1,23 @@
-<!-- Menu Button -->
-<nav class="menu">
-    <div class="menu-content">
-        <a href="index.html#home" class="menu-item">Home</a>
-        <a href="index.html#experience" class="menu-item">Experience</a>
-        <a href="about.html" class="menu-item">About Me</a>
-        <a href="#projects" class="menu-item" id="projects-btn">Projects</a> 
-    </div>
-</nav>
-
-
-<div id="projects-modal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Select a Project</h2>
-        <a href="data-visualisation.html" class="button">Adelaide Age Structure Data Visualisation</a>
-        <a href="Thesis.html" class="button">Thesis</a>
-        <a href="AR.html" class="button">AR software project</a>
-        <a href="AWL.html" class="button">Financial Data Visualisation</a>
-        <a href="Map.html" class="button">Animal Rescue Mapping Visualisation</a>
-        <a href="data_mining.html" class="button">Data Mining Project</a>
-        <a href="cloud.html" class="button">Cloud Computing Project</a>
-    </div>
-</div>
-<script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrew Cheng - Portfolio</title>
+    <link rel="icon" href="images/dinosaur.gif">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="link-section.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+<body>
+    <!-- Menu Button -->
+    <nav class="menu">
+        <div class="menu-content">
+            <a href="index.html#home" class="menu-item">Home</a>
+            <a href="index.html#projects" class="menu-item">Projects</a>
+            <a href="about.html" class="menu-item">About Me</a>
+            <a href="index.html#experience" class="menu-item">Experience</a>
+        </div>
+    </nav>
