--- a/Thesis.html
+++ b/Thesis.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thesis</title>
-    <link rel="icon" href="images/dinosaur.gif" >
+    <link rel="icon" href="images/dinosaur.gif">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="link-section.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <!-- Placeholder for dynamically loaded menu -->
     <div id="menu-placeholder"></div>
 
     <!-- Thesis Section -->
-    <section class="Thesis-section">
+    <section class="projects-section">
         <h2>Thesis</h2>
         
         <div class="project"> 
