--- a/links-section.html
+++ b/links-section.html
@@ -2,11 +2,11 @@
     <div class="links-container">
         <div class="link-category">
             <h3>Projects</h3>
-            <a href="data-visualisation.html">Adelaide Age Structure Data Visualisation</a>
+            <!-- <a href="data-visualisation.html">Adelaide Age Structure Data Visualisation</a> -->
             <a href="Thesis.html">Thesis</a>
             <a href="AR.html">AR software project</a>
             <a href="AWL.html">Financial Data Visualisation</a>
-            <a href="Map.html">Animal Rescue Mapping Visualisation</a>
+            <!-- <a href="Map.html">Animal Rescue Mapping Visualisation</a> -->
             <a href="data_mining.html">Data Mining Project</a>
             <a href="cloud.html">Cloud Computing Project</a>
         </div>
