cloud bugs & design bottom

--- a/index.html
+++ b/index.html
@@ -96,16 +96,6 @@
                     <a href="cloud.html" class="button">View Project</a>
                 </div>
             </div>
-                            <!-- Cloud Computing Project -->
-                <div class="project-card">
-                    <img src="images/docker_compose.png" alt="Cloud Computing Project">
-                    <h3>Cloud Computing Project</h3>
-                    <h2>(web-based application using Docker & GCP)</h2>
-                  
-                    <a href="cloud.html" class="button">View Project</a>
-                </div>
-            </div>
-
             
         </section>
 
@@ -145,6 +135,8 @@
             </div>
         </section>
     </div>
+        <!-- Placeholder for dynamically loaded link section -->
+        <div id="links-section-placeholder"></div>
 
     <!-- Back to Top Button -->
     <button id="back-to-top" title="Go to top">
