--- a/links-section.html
+++ b/links-section.html
@@ -9,6 +9,7 @@
             <!-- <a href="Map.html">Animal Rescue Mapping Visualisation</a> -->
             <a href="data_mining.html">Data Mining Project</a>
             <a href="cloud.html">Cloud Computing Project</a>
+            <a href="MBQ.html">Full Stack Web Project</a>
         </div>
         <div class="link-category">
             <h3>Contact</h3>
