--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <!-- Experience Section -->
         <section id="experience" class="experience-section">
-            <h2>Experience</h2>
+            <h2>EXPERIENCE</h2>
             <div class="timeline">
                 <!-- Experience Item 1 -->
                 <div class="timeline-item">
