--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!-- Experience Item 1 -->
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Technical Officer (Software)</h3>
+                        <h3>Software Engineer</h3>
                         <p>The University of Queensland & Queensland Children's Hospital</p>
                         <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | Mar 2024 - Current</p>
                         
