--- a/MBQ.html
+++ b/MBQ.html
@@ -38,6 +38,7 @@
                     <p>The user interface has been designed with a focus on simplicity and usability. Researchers and parents can easily navigate the platform, ensuring that data input and visualization are efficient and intuitive.</p>
                     <img src="images/MBQ1.png" alt="User Interface Design" class="project-img">
                     <img src="images/MBQ2.jpg" alt="User Interface Design" class="project-img">
+                    <img src="images/Login.JPG" alt="User Interface Design" class="project-img">
                 </div>
         
         <!-- Image 2: Data Visualization -->
