--- a/MBQ.html
+++ b/MBQ.html
@@ -43,7 +43,7 @@
         
         <!-- Image 2: Data Visualization -->
         <div class="project">
-            <h3>Data Visualization</h3>
+            <h3>Data Visualization for research purpose</h3>
                 <p>The system includes custom visualizations to display the collected data in an interactive and easy-to-understand format. This feature helps researchers analyze trends and behavior patterns over time.</p>
                 <img src="images/11.png" alt="Data Visualization" class="project-img">
                 <img src="images/12.png" alt="Data Visualization" class="project-img">
