--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <div class="hero-content">
             <h1 class="animated-text">Hi, I'm Andrew Cheng</h1>
             <p class="subtitle">Software Engineer </p>
-            <p class="subtitle"> IT Support</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/andrewcheng887/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
@@ -47,12 +46,12 @@
             <h2>PROJECTS</h2>
             <div class="project-grid">
                 <!-- Thesis Project -->
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <img src="images/FFT.JPG" alt="Thesis Project">
                     <h3>Thesis</h3>
                     <h2>(CUDA GPU acceleration)</h2>
                     <a href="Thesis.html" class="button">View Project</a>
-                </div>
+                </div> -->
 
                 <!-- AR Software Project -->
                 <div class="project-card">
