--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="images/dinosaur.gif">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="link-section.css">
-    <link rel="stylesheet" href="styles.css">
+ 
     <!-- Font Awesome Icon Script -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -28,7 +28,7 @@
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hello! I'm <strong>Andrew Cheng</strong>, a Software Engineer and Data Analyst based in Adelaide, Australia. I hold a Master's degree in <strong>Computer Science</strong> from The University of Queensland, specializing in software development, cloud computing, data analysis and IT support.</p>
+                <p>Hello! I'm <strong>Andrew Cheng</strong>, a Software Engineer based in Adelaide, Australia. I hold a Master's degree in <strong>Computer Science</strong> from The University of Queensland, specializing in software development, cloud computing, data analysis and IT support.</p>
                 <p>I have over four years of experience as an IT support specialist and one year of experience as a software engineer at Queensland Children's Hospital, where I developed web applications and worked on data visualisation projects. My data analysis work at Desygner, significantly improved the company's database by conducting data cleaning and optimization. Additionally, created data reports to improve decision-making and data quality.</p>
                 <p>I am passionate about using technology to solve complex problems, drive innovation, and create positive impacts. I value collaboration, open communication, and am always eager to learn and adapt to new advancements in the tech field.</p>
             </div>
