new design and new mbq

--- a/MBQ.html
+++ b/MBQ.html
@@ -41,12 +41,21 @@
                     <img src="images/Login.JPG" alt="User Interface Design" class="project-img">
                 </div>
         
-        <!-- Image 2: Data Visualization -->
+
+                <!-- Image 5: MongoDb -->
+                <div class="project">
+                    <h3>MongoDB & MongoDB Cpmpass</h3>
+                        <p>  Every questionnaire response is securely stored in a MongoDB database. This structure allows hospital researchers to easily access, manage, and analyze participant data for their studies. MongoDB's flexibility and scalability make it an ideal choice for handling diverse and evolving data formats in medical research environments.</p>
+                        <img src="images/db1.jpg" alt="MongoDb" class="project-img">
+                        <img src="images/db2.jpg" alt="MongoDb" class="project-img">
+                </div>
+
+                        <!-- Image 2: Data Visualization -->
         <div class="project">
             <h3>Data Visualization for research purpose</h3>
                 <p>The system includes custom visualizations to display the collected data in an interactive and easy-to-understand format. This feature helps researchers analyze trends and behavior patterns over time.</p>
                 <img src="images/11.png" alt="Data Visualization" class="project-img">
-                <img src="images/12.png" alt="Data Visualization" class="project-img">
+                <img src="images/12.jpg" alt="Data Visualization" class="project-img">
         </div>
 
 
