--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="project-card">
                         <img src="images/MBQ1.png" alt="AR Software Project">
                         <h3>Full Stack Development</h3>
-                        <h2>(Web-Based Research Tool: Movement Behavior Questionnaire)</h2>
+                        <h2>(Research Tool for Queensland children’s Hospital)</h2>
                         <a href="MBQ.html" class="button">View Project</a>
                     </div>
 
