--- a/MBQ.html
+++ b/MBQ.html
@@ -46,8 +46,8 @@
                 <div class="project">
                     <h3>MongoDB & MongoDB Cpmpass</h3>
                         <p>  Every questionnaire response is securely stored in a MongoDB database. This structure allows hospital researchers to easily access, manage, and analyze participant data for their studies. MongoDB's flexibility and scalability make it an ideal choice for handling diverse and evolving data formats in medical research environments.</p>
-                        <img src="images/db1.jpg" alt="MongoDb" class="project-img">
-                        <img src="images/db2.jpg" alt="MongoDb" class="project-img">
+                        <img src="images/db1.JPG" alt="MongoDb" class="project-img">
+                        <img src="images/db2.JPG" alt="MongoDb" class="project-img">
                 </div>
 
                         <!-- Image 2: Data Visualization -->
