new design of experience

--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hello! I'm <strong>Andrew Cheng</strong>, a Software Engineer based in Adelaide, Australia. I hold a Master's degree in <strong>Computer Science</strong> from The University of Queensland, specializing in software development, cloud computing, data analysis and IT support.</p>
-                <p>I have over four years of experience as an IT support specialist and one year of experience as a software engineer at Queensland Children's Hospital, where I developed web applications and worked on data visualisation projects. My data analysis work at Desygner, significantly improved the company's database by conducting data cleaning and optimization. Additionally, created data reports to improve decision-making and data quality.</p>
-                <p>I am passionate about using technology to solve complex problems, drive innovation, and create positive impacts. I value collaboration, open communication, and am always eager to learn and adapt to new advancements in the tech field.</p>
+                <p>Hello! I'm <strong>Andrew Cheng</strong>, a Software Engineer <strong>based in Adelaide</strong>, Australia. I hold a Master's degree in <strong>Computer Science</strong> from The University of Queensland, specializing in software development, cloud computing, data analysis and IT support.</p>
+                <p>I have over four years of experience as an IT support specialist and <strong>one year of experience as a software engineer(Full Stack) at Queensland Children's Hospital</strong> and 3 month as a data analyst at Desygner.</p>
+                <p>I am passionate about using technology to solve complex problems, drive innovation, and create positive impacts. <strong>I value collaboration, open communication, and am always eager to learn</strong>  and adapt to new advancements in the tech field.</p>
             </div>
         </div>
     </section>
