--- a/index.html
+++ b/index.html
@@ -54,20 +54,31 @@
                 </div> -->
 
                 <!-- AR Software Project -->
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <img src="images/AR.png" alt="AR Software Project">
                     <h3>AR Pattern Recognition for Education</h3>
                     <h2>(Interactive 3D models of human organs)</h2>
                     <a href="AR.html" class="button">View Project</a>
-                </div>
+                </div> -->
 
-                    <!-- AR Software Project -->
+                    <!-- MBQ Project -->
                     <div class="project-card">
                         <img src="images/MBQ1.png" alt="AR Software Project">
                         <h3>Full Stack Development</h3>
+                        <h3>(Node.js)</h3>
                         <h2>(Research Tool for Queensland children’s Hospital)</h2>
                         <a href="MBQ.html" class="button">View Project</a>
                     </div>
+
+                <!-- vue & .NET8 Project -->
+                <div class="project-card">
+                    <img src="images/app.JPG" alt="Cloud Computing Project">
+                    <h3>Full Stack Web Project</h3>
+                    <h3>(Vue & .NET8)</h3>
+                    <h2>(Coles & Aldi & Woolworth weekly specials prices compare platform)</h2>
+                  
+                    <a href="AP.html" class="button">View Project</a>
+                </div>
 
                 <!-- Financial Data Visualisation -->
                 <div class="project-card">
