--- a/AP.html
+++ b/AP.html
@@ -62,23 +62,24 @@
     <p><strong>•</strong>Swagger-powered API documentation and testing interface</p>
     <p><strong>•</strong>Entity Framework Core for efficient data operations</p>
     
+    
     <div class="image-grid">
         <!-- Swagger Documentation Images -->
         <div class="image-item">
             <p>Swagger UI showing all available API endpoints</p>
-            <img src="images/swagger.jpg" alt="Swagger API Home" class="project-img">
+            <img src="images/swagger.JPG" alt="Swagger API Home" class="project-img">
                 </div>
         <div class="image-item">
             <p>Testing the /api/Coles/{id}/detail endpoint in Swagger</p>
-            <img src="images/swagger2.jpg" alt="Product Detail Endpoint" class="project-img">
+            <img src="images/swagger2.JPG" alt="Product Detail Endpoint" class="project-img">
                 </div>
         <div class="image-item"> 
             <p>Executing /api/Coles/{id}/price endpoint with sample response</p>
-            <img src="images/swagger3.jpg" alt="Price Endpoint" class="project-img">
+            <img src="images/swagger3.JPG" alt="Price Endpoint" class="project-img">
                 </div>
         <div class="image-item">
             <p>Swagger's automatically generated API schema documentation</p>
-             <img src="images/swagger4.jpg" alt="API Schema" class="project-img">
+             <img src="images/swagger4.JPG" alt="API Schema" class="project-img">
                 </div>
         <div class="image-item">
             <p>.NET API Controller handling products endpoints</p>
