--- a/AP.html
+++ b/AP.html
@@ -25,7 +25,7 @@
                 AP Price Compare is a full-stack web application that helps Australian consumers compare grocery prices across major supermarkets. 
                 The Vue.js frontend provides a responsive interface while the .NET 8 backend handles data processing and API services.
                 <br><br>
-                This ongoing project currently supports price comparison for thousands of products with weekly specials tracking.
+              This ongoing project currently supports price comparison for several hundred products and is actively expanding.
             </p>
         </div>
 
